Fix serialisation of Arenas and challenges to JSON

--- a/Inf3/conf.properties
+++ b/Inf3/conf.properties
@@ -20,8 +20,8 @@ default_skirmish = SWORD
 default_dragon = FIGHT
 default_staghunt = STAG
 # interval in / chance by which the dragons move around by one cell (ms)
-dragon_move_interval = 100000
-dragon_move_chance = 700
+dragon_move_interval = 1000000
+dragon_move_chance = 100
 # folder for the database used for this session. We will suffixed with the timestamp of the startup of the server and ".db" 
 db_file_path = db/
 # server port
